src/components/Menu.css
.Menu {
  opacity: 1;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  transition: width 1s;
  transition-timing-function: ease-out;
  right: 0;
  z-index: 100;
}

.Menu-inner {
  overflow-x: auto;
}

@media (min-width: 640px) {
  .Menu {
    right: 50px;/* Some space because of map action buttons */
    padding-left: 50px;
  }
  .Menu.filter-open {
    transition-timing-function: ease-out;
    width: calc(100% - 324px);
  }

  .Menu-inner {
    padding-left: 1rem; /* 16px */
    padding-right: 1rem; /* 16px */
    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
    margin: 1rem; /* 16px */
    margin-bottom: 0px;
    border-radius: 1.5rem; /* 24px */

    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    display: inline-block;
    max-width: 100%;
    width: auto;
    /*
     * Base rule sets overflow-x: auto. When overflow-x is not visible, browsers
     * treat overflow-y as auto as well, which clips the desktop submenu that
     * extends above the bar. Desktop layout does not need horizontal scroll.
     */
    overflow: visible;
  }

  @media (max-width: 964px) {
    .filter-open .Menu-inner span {
      display: none;
    }
  }
}

.toggleactive {
  color: black;
  background-color:white;
}

.togglenotactive {
  color: white;
  background-color:transparent;
}

.text-menu {
  position: relative;
  color: #000;
  padding-left: 0.75rem; /* 12px */
  padding-right: 0.75rem; /* 12px */
  display:inline-block;
  font-size: 14px;
  line-height: 60px;
  height: 60px;
  white-space: nowrap;
}
.text-menu:hover {
  color: rgb(30 64 175);;
}

.text-menu::after {
  content: "";
  display: inline-block;
  width: 1px;
  height: 28px;
  top: 16px;
  border-right: solid 1px #000;
  position: absolute;
  right: 0;
}
.text-menu:hover,
.text-menu.is-active {
  color: #15AEEF;
}

.text-menu img {
  height: 25px;
  display: inline-block;
  margin-left: 0.25rem; /* 4px */
  margin-right: 0.25rem; /* 4px */
}
.text-menu:last-child::after {
  border-right: none;
}

.Menu-item-wrapper {
  position: relative;
  display: inline-block;
}

.Menu-item-wrapper.has-submenu .text-menu::after {
  border-right: solid 1px #000;
}

.Menu-desktop-submenu {
  display: none;
}

@media (min-width: 640px) {
  .Menu-item-wrapper.has-submenu:hover .Menu-desktop-submenu {
    display: block;
  }
}

.Menu-desktop-submenu {
  position: absolute;
  bottom: calc(100% + 16px);
  left: 50%;
  transform: translateX(-50%);
  width: 228px;
  background: #ffffff 0% 0% no-repeat padding-box;
  box-shadow: 0 3px 6px #00000029;
  border-radius: 20px;
  opacity: 1;
  padding: 16px 20px;
  z-index: 120;
}

/*
 * Invisible hover bridge: the 16px offset leaves a dead zone between the bar
 * and the panel. Without this, :hover drops before the cursor reaches links.
 */
.Menu-desktop-submenu::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 100%;
  height: 24px;
}

.Menu-desktop-submenu-item {
  display: block;
  font: normal normal normal 14px/17px Inter;
  letter-spacing: 0;
  color: #343e47;
  text-decoration: none;
  margin: 0;
  line-height: 1.25rem;
}

.Menu-desktop-submenu-item:hover {
  color: #15aeef;
}

.Menu-desktop-submenu-item.is-active {
  color: #15aeef;
}

.Menu-desktop-submenu-divider {
  width: 30px;
  height: 0;
  border: 1px solid #707070;
  opacity: 1;
  margin: 10px 0;
}

.Menu-subMenu {
  bottom: 68px;
  background: white;
  right: 0;
  padding-top: 0.25rem; /* 4px */
  padding-bottom: 0.25rem; /* 4px */
}
@media (min-width: 640px) {
  .Menu-subMenu {
    bottom: 78px;
  }
}

.text-link {
  position: relative;
  color: #000;
  padding-left: 1rem; /* 16px */
  padding-right: 1rem; /* 16px */
  padding-top: 0.5rem; /* 8px */
  padding-bottom: 0.5rem; /* 8px */
  display: block;

  font-size: 14px;
  border-radius: 17px;
  white-space: nowrap;
}
.text-link:hover {
  color: rgb(30 64 175);;
}
.text-link:hover,
.text-link.is-active {
  color: #15AEEF;
}


/*
.text-menu.has-icon.icon-aanbod { padding-left: 21px;background-image: url("https://www.dashboarddeelmobiliteit.nl/images/components/Menu/icon-aanbod.png") }
.text-menu.has-icon.is-active.icon-aanbod { background-image: url("https://www.dashboarddeelmobiliteit.nl/images/components/Menu/icon-aanbod-active.png") }
.text-menu.has-icon.icon-verhuringen { padding-left: 52px; background-image: url("https://www.dashboarddeelmobiliteit.nl/images/components/Menu/icon-verhuringen.png") }
.text-menu.has-icon.is-active.icon-verhuringen { background-image: url("https://www.dashboarddeelmobiliteit.nl/images/components/Menu/icon-verhuringen-active.png") }
.text-menu.has-icon.icon-ontwikkeling { padding-left: 52px; background-image: url("https://www.dashboarddeelmobiliteit.nl/images/components/Menu/icon-ontwikkeling.png") }
.text-menu.has-icon.is-active.icon-ontwikkeling { background-image: url("https://www.dashboarddeelmobiliteit.nl/images/components/Menu/icon-ontwikkeling-active.png") }
*/

